# orbkit

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: orbkit-run-pytest.yml
examples/: example.ipynb
orbkit/: atomic_orbital.py  coulomb_potential.py  function_collections.py  molecular_orbital.py  setting.py  structure.py  trexio_wrapper.py
tests/: conftest.py  test_AOs.py  test_MOs.py  test_ecps.py  test_trexio.py
tests/trexio_example_files/: H2_ae_ccpvqz.h5  H2_ae_ccpvtz_cart.h5  H2_ecp_ccpvtz.h5  H2_ecp_ccpvtz_cart.h5  water_ccecp_ccpvqz.h5
