[metadata]
name = orbkit
author = Kosuke Nakano
author_email = kousuke_1123@icloud.com
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/kousuke-nakano/orbkit
project_urls =
    Bug tracker = https://github.com/kousuke-nakano/orbkit/issues
    Documentations = https://orbkit.readthedocs.io/en/latest/
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: BSD-3-Clause License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = orbkit
python_requires = >=3.9.0
install_requires =
    numpy <2.0.0,>=1.23.5
    scipy >= 1.14.1
    jax   >= 0.4.33
    jaxlib >= 0.4.33
    jaxtyping >= 0.2.34
    flax >= 0.9.0
    trexio >= 2.5.0
    pytest >= 8.3.3
    pre-commit >= 3.8.0
    setuptools_scm >= 8.1.0
